--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.1
+monitor_speed = 115200
+upload_port = /dev/ttyUSB1
