--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,8 @@ board = esp32dev
 framework = arduino
 lib_deps = sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.1
 monitor_speed = 115200
-upload_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
+; set frequency to 160MHz
+board_build.f_cpu = 160000000L
+; set frequency to 80MHz
+board_build.f_flash = 80000000L
