--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.1
 	https://github.com/taranais/NTPClient.git
+	bblanchon/ArduinoJson@^6.17.3
 monitor_speed = 115200
 upload_port = /dev/ttyUSB0
 board_build.f_cpu = 160000000L
